[gd_scene load_steps=7 format=4 uid="uid://byv5o4se612st"]

[ext_resource type="AudioStream" uid="uid://dxs2caos46hid" path="res://audio/coin.wav" id="1_36l7l"]
[ext_resource type="Script" path="res://silver_coin.gd" id="1_n06cy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vox2r"]
resource_name = "Silver.001"
albedo_color = Color(0.573327, 0.573327, 0.573327, 1)
roughness = 0.775
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_vb44y"]
_surfaces = [{
"aabb": AABB(-3.18564, -3.42992, -0.320475, 6.37287, 6.70084, 0.644161),
"format": 34359742465,
"index_count": 780,
"index_data": PackedByteArray("AAACAAEAAwAFAAQABgABAAIABwAIAAQACQALAAoADAACAA0ACAAPAA4AEAAKABEAEgANABMADwABAAYAFAARAAcAFQATAAsAFgAJABAAFwAMABIAGAAEAA4AGQAQABQAGgASABUAGwAOAAYAHAAUAAUAHQAVAAkAHgAGAAwAHwAhACAAIgAIAAcAIwAKAAsAJAANAAIADwAIACIAJQARAAoAIQATAA0AAQAPACAAHwAHABEAJgALABMAJwApACgAKgArAAMAJwAtACwALgArACoALwAxADAAMgAnADMANAAqADUANgAvADcAOAAyADkAOgA1ACwALgA2ADsAMQA4ADwANwAwABYAOQAzABcANQAqABgAOwA3ABkAPAA5ABoALAA1ABsAKwA7ABwAMAA8AB0AMwAsAB4APQA/AD4ALgA0AEAAMQAvAD4AJwAyAEEAOgBCAEAALwA2AEMAMgA4AD8ALQAoAEIANgAuAD0AOAAxAEQARQBHAEYARQBGAEgARQBIAEkASgBFAEkASgBJAEsASwBJAEwATABJAE0ATQBJAE4ATwBKAFAAUABKAEsATwBQAFEATwBRAFIATwBSAFMAVABPAFMAVABTAFUAVgBUAFUAVgBVAFcAWABWAFcAWQBbAFoAWABXAFwAXQBYAFwAXgBdAFwAWQBaAF8AYABeAFwAWQBfAGAAYABcAGEAWQBgAGEAYgBZAGEAYwBiAGEAYwBhAGQAZQBnAGYAaABnAGUAaQBnAGgAaQBqAGcAawBqAGkAbABrAGkAbQBsAGkAbgBtAGkAbwBwAGoAawBvAGoAcQBwAG8AcgBwAHEAcwBwAHIAcwB0AHAAdQB0AHMAdQB2AHQAdwB2AHUAdwB4AHYAeQB7AHoAfAB4AHcAfAB9AHgAfAB+AH0AfwB7AHkAfACAAH4AgAB7AH8AgQCAAHwAgQB7AIAAgQCCAHsAgQCDAIIAhACDAIEATABNAG0ASwBMAGwAUABLAGsAUQBQAG8AUgBRAHEAUwBSAHIAVQBTAHMAVwBVAHUAXABXAHcAYQBcAHwAZABhAIEAYwBkAIQAYgBjAIMAWQBiAIIAWQB7AHoAWgBbAHoAXwBaAHkAYABfAH8AXgBgAIAAXQBeAH4AWABdAH0AWAB4AHYAVABWAHYATwBUAHQASgBPAHAARQBKAGoARwBFAGcARgBHAGYASABGAGUASQBIAGgATgBJAGkATQBOAG4AAAABAIUAAwAEABgABgACAAwABwAEAAUACQAKABAADAANABIACAAOAAQAEAARABQAEgATABUADwAGAA4AFAAHAAUAFQALAAkAFgAQABkAFwASABoAGAAOABsAGQAUABwAGgAVAB0AGwAGAB4AHAAFAAMAHQAJABYAHgAMABcAIwAfACUAHwAgACIAIAAAAIUAAAAgACQAJAAgACEAIQAjACYAIwAhAB8AIgAHAB8AIwALACYAJAACAAAADwAiACAAJQAKACMAIQANACQAAQAgAIUAHwARACUAJgATACEAJwAoAC0AKgADABgAJwAsADMALgAqADQALwAwADcAMgAzADkANAA1ADoANgA3ADsAOAA5ADwAOgAsAC0ALgA7ACsAMQA8ADAANwAWABkAOQAXABoANQAYABsAOwAZABwAPAAaAB0ALAAbAB4AKwAcAAMAMAAdABYAMwAeABcAPQA+AEMAPgA/AEQAPwApAEEAKQA/ACgAKAA/AEIAQgA/AEAAQAA/AD0ALgBAAD0AMQA+AEQAJwBBACkAOgBAADQALwBDAD4AMgA/AEEALQBCADoANgA9AEMAOABEAD8ATABtAGwASwBsAGsAUABrAG8AUQBvAHEAUgBxAHIAUwByAHMAVQBzAHUAVwB1AHcAXAB3AHwAYQB8AIEAZACBAIQAYwCEAIMAYgCDAIIAWQCCAHsAWQB6AFsAWgB6AHkAXwB5AH8AYAB/AIAAXgCAAH4AXQB+AH0AWAB9AHgAWAB2AFYAVAB2AHQATwB0AHAASgBwAGoARQBqAGcARwBnAGYARgBmAGUASABlAGgASQBoAGkATgBpAG4ATQBuAG0A"),
"lods": [2.89187, PackedByteArray("LAAFAAwAMAAVAAUAOwAwAAUALAA7AAUAJwA7ACwAJwAsADMAJwAxADsAMQAnADMAMQAwADsAMQAzADAAMAAzABUAMQAnAD0AMQA9AD8AJwAxAD8AJwA/AD0ARQBJAEsASwBJAE0ATQBJAE4ARQBLAFUAWABFAFUAWABVAGEAYQBbAFgAZQBnAGYAaABnAGUAaQBnAGgAaQBqAGcAbgBtAGkAbQBsAGkAbABrAGkAawBqAGkAawBvAGoAbwBwAGoAcQBwAG8AcgBwAHEAcwBwAHIAcwB0AHAAdQB0AHMAdQB2AHQAdwB2AHUAdwB4AHYAfAB4AHcAfAB9AHgAfAB+AH0AfACAAH4AgQCAAHwAhACDAIEAgQCDAIIAgQCCAHsAgQB7AIAAgAB7AH8AfwB7AHkAeQB7AHoASwBNAG0ASwBtAGwASwBsAGsASwBrAG8ASwBvAHEAVQBLAHEAVQBxAHIAVQByAHMAVQBzAHUAVQB1AHcAYQBVAHcAYQB7AHoAYQB6AFsAYQB3AHwAYQB8AIEAYQCBAIQAYQCEAIMAYQCDAIIAYQCCAHsAWABbAHoAWAB6AHkAWAB5AH8AWAB/AIAAWACAAH4AWAB+AH0AWAB9AHgAWAB4AHYAWAB2AHQARQB0AHAARQBYAHQASQBFAGgASQBoAGkARQBlAGgARQBmAGUARQBnAGYARQBqAGcARQBwAGoATgBJAGkATgBpAG4ATQBOAG4ATQBuAG0ADAATABUAFQATAAUAEwAMAAUAMwAMABUAMwAsAAwA")],
"name": "Silver.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 134,
"vertex_data": PackedByteArray("nu3Hv1G/DsBZvxm8M/pROoU+L8Ds24G+nu3Hv1G/DsDs24G+tftLQKuxdD/oacC6tftLQPuyjr8O3IG+tftLQKuxdD8O3IG+M/pROsuDW8Ds24G+IuEhQPT4PT8O3IG+IuEhQD+tZr8O3IG+mPj7vw9jKEDs24G+M/pROnMRJUAO3IG+je3Hvz6SBEDs24G+qfj7vxmQMsDs24G+48YhwE+tZr/s24G+Hy38Px2QMsDs24G+FCLIP1G/DsDs24G+M/pROrhWUUAO3IG+HSLIPz6SBEAO3IG+duFLwPuyjr/s24G+48YhwAX5PT/s24G+Hy38PwtjKEAO3IG+duFLwKuxdD/s24G+mPj7vw9jKEDoacC6qfj7vxmQMsDoacC6tftLQPuyjr/oacC6M/pROrhWUUDoacC6duFLwPuyjr/oacC6Hy38Px2QMsDoacC6Hy38PwtjKEDoacC6duFLwKuxdD/oacC6M/pROsuDW8DoacC6IuEhQPT4PT9Zvxm8FCLIP1G/DsBZvxm848YhwAX5PT9Zvxm8IuEhQD+tZr9Zvxm8M/pROnMRJUBZvxm848YhwE+tZr9Zvxm8HSLIPz6SBEBZvxm8je3Hvz6SBEBZvxm8nu3Hv1G/DsAYW4A+M/pROoU+L8C/SdM7nu3Hv1G/DsC/SdM7tftLQPuyjr86W4A+tftLQKuxdD86W4A+M/pROsuDW8AYW4A+M/pROoU+L8AYW4A+IuEhQPT4PT86W4A+M/pROnMRJUAYW4A+mPj7vw9jKEAYW4A+je3Hvz6SBEAYW4A+48YhwE+tZr8YW4A+qfj7vxmQMsAYW4A+IuEhQD+tZr86W4A+Hy38Px2QMsAYW4A+HSLIPz6SBEA6W4A+M/pROrhWUUA6W4A+48YhwAX5PT8YW4A+duFLwPuyjr8YW4A+FCLIP1G/DsAYW4A+Hy38PwtjKEA6W4A+duFLwKuxdD8YW4A+IuEhQPT4PT+/SdM7M/pROnMRJUC/SdM748YhwAX5PT+/SdM7IuEhQD+tZr+/SdM748YhwE+tZr+/SdM7FCLIP1G/DsC/SdM7HSLIPz6SBEC/SdM7je3Hvz6SBEC/SdM7QtDZPrmOyT9NFaS+nKShvrit0z9NFaS+3PadvdnR1j9NFaS+pdkMv2hByj9NFaS+CMlGv9+Muj9NFaS+iZVBP8R5pD9NFaS+oiclvQ3+oj9NFaS+ViqIvoFZnz9NFaS+B5oDvyNqkj9NFaS+CMlGv7xacj9NFaS+DhRgP0JDVz9NFaS+Ko9ePhnonD9NFaS+mszIPkM4jD9NFaS+vcfpPkuTZj9NFaS+9GzWPSxF4j5NFaS+zv0FP8nkRD5NFaS+UoAMv+7o/zxNFaS+iUAFvncPcL5NFaS+opZmv8L5ML8rFaS+xMz2vrvuPb8rFaS+7l1bP95WoL8rFaS+ucIbP2Rbbr8rFaS+7l1bP7KeLr9NFaS+vw1Jv0C+kL8rFaS+3sravpwWbL8rFaS+0qyEvil1ib8rFaS+iZqoPiLgir8rFaS+4BPrPJmdkb8rFaS+Zwzzvvgyt78rFaS+uJEWP9Y2tb8rFaS+mRKZPn5zwb8rFaS+SIuzvGVxxb8rFaS+nKShvrit0z8suqU+3PadvdnR1j8suqU+QtDZPrmOyT8suqU+pdkMv2hByj8suqU+CMlGv9+Muj8suqU+iZVBP8R5pD8suqU+oiclvQ3+oj8suqU+ViqIvoFZnz8suqU+B5oDvyNqkj8suqU+CMlGv7xacj8suqU+Ko9ePhnonD8suqU+DhRgP0JDVz8suqU+mszIPkM4jD8suqU+vcfpPkuTZj8suqU+9GzWPSxF4j4suqU+zv0FP8nkRD4suqU+UoAMv+7o/zwsuqU+iUAFvncPcL4suqU+opZmv8L5ML8suqU+xMz2vrvuPb8suqU+ucIbP2Rbbr8suqU+7l1bP7KeLr8suqU+7l1bP95WoL8suqU+vw1Jv0C+kL8suqU+3sravpwWbL8suqU+0qyEvil1ib8suqU+iZqoPiLgir8suqU+4BPrPJmdkb8suqU+Zwzzvvgyt78suqU+uJEWP9Y2tb8suqU+mRKZPn5zwb8suqU+SIuzvGVxxb8suqU+M/pROoU+L8BZvxm8")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_h13u8"]
resource_name = "Silver Coin_SilverCoin_Circle_002-Mesh"
_surfaces = [{
"aabb": AABB(-3.18564, -3.42992, -0.320475, 6.37287, 6.70084, 0.644161),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAP7O1Vj8AAIA/0jlnPwAAgD/C914/AACAP+F7bz8AAIA/8b13PwAAgD+jc04/AACAP/cghD0AAIA/9yAEPQAAgD8AAAAAAACAPwAAgD8AAIA/lDFGPwAAgD9yMcY9AACAP/cgBD4AAIA/NSklPgAAgD9yMUY+AACAP3TvPT8AAIA/sDlnPgAAgD9krTU/AACAPxghhD4AAIA/VWstPwAAgD/SOec+AACAPwghBD8AAIA/8b33PgAAgD83pZQ+AACAP0UpJT8AAIA/NuccPwAAgD8XYww/AACAPyelFD8AAIA/VimlPgAAgD+ztdY+AACAP5Qxxj4AAIA/da21PgAAgD/SOWc/AACAP8L3Xj8AAIA/s7VWPwAAgD/he28/AACAP/G9dz8AAIA/o3NOPwAAgD/3IIQ9AACAP/cgBD0AAIA/AAAAAAAAgD8AAIA/AACAP3Ixxj0AAIA/lDFGPwAAgD/3IAQ+AACAPzUpJT4AAIA/cjFGPgAAgD907z0/AACAP7A5Zz4AAIA/ZK01PwAAgD8YIYQ+AACAP1VrLT8AAIA/CCEEPwAAgD/xvfc+AACAP9I55z4AAIA/N6WUPgAAgD9FKSU/AACAPzbnHD8AAIA/F2MMPwAAgD8npRQ/AACAP1YppT4AAIA/s7XWPgAAgD+UMcY+AACAP3WttT4AAIA/AAAAPQAAAAAAAAAAAACAPwAAAAAAAAAAAACAPQAAAAAAAAA9AACAPwAAAD0AAAAAAADAPQAAAAAAAIA9AACAPwAAgD0AAAAAAAAAPgAAAAAAAMA9AACAPwAAwD0AAAAAAAAgPgAAAAAAAAA+AACAPwAAAD4AAAAAAABAPgAAAAAAACA+AACAPwAAID4AAAAAAABgPgAAAAAAAEA+AACAPwAAQD4AAAAAAACAPgAAAAAAAGA+AACAPwAAYD4AAAAAAACQPgAAAAAAAIA+AACAPwAAgD4AAAAAAACgPgAAAAAAAJA+AACAPwAAkD4AAAAAAACwPgAAAAAAAKA+AACAPwAAoD4AAAAAAADAPgAAAAAAALA+AACAPwAAsD4AAAAAAADQPgAAAAAAAMA+AACAPwAAwD4AAAAAAADgPgAAAAAAANA+AACAPwAA0D4AAAAAAADgPgAAAAAAAPA+AACAPwAA4D4AAIA/AAAAPwAAAAAAAPA+AACAPwAA8D4AAAAAAAAIPwAAAAAAAAA/AACAPwAAAD8AAAAAAAAQPwAAAAAAAAg/AACAPwAACD8AAAAAAAAYPwAAAAAAABA/AACAPwAAED8AAAAAAAAgPwAAAAAAABg/AACAPwAAGD8AAAAAAAAoPwAAAAAAACA/AACAPwAAID8AAAAAAAAoPwAAAAAAADA/AACAPwAAKD8AAIA/AAA4PwAAAAAAADA/AACAPwAAMD8AAAAAAABAPwAAAAAAADg/AACAPwAAOD8AAAAAAABIPwAAAAAAAEA/AACAPwAAQD8AAAAAAABQPwAAAAAAAEg/AACAPwAASD8AAAAAAABYPwAAAAAAAFA/AACAPwAAUD8AAAAAAABgPwAAAAAAAFg/AACAPwAAWD8AAAAAAABoPwAAAAAAAGA/AACAPwAAYD8AAAAAAABwPwAAAAAAAGg/AACAPwAAaD8AAAAAAAB4PwAAAAAAAHA/AACAPwAAcD8AAAAAAACAPwAAAAAAAHg/AACAPwAAeD8AAAAAAAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAPQAAgD8AAIA9AACAPwAAwD0AAIA/AAAAPgAAgD8AACA+AACAPwAAQD4AAIA/AABgPgAAgD8AAIA+AACAPwAAkD4AAIA/AACgPgAAgD8AALA+AACAPwAAwD4AAIA/AADQPgAAgD8AAOA+AACAPwAA8D4AAAAAAAAAPwAAgD8AAAg/AACAPwAAED8AAIA/AAAYPwAAgD8AACA/AACAPwAAKD8AAIA/AAAwPwAAAAAAADg/AACAPwAAQD8AAIA/AABIPwAAgD8AAFA/AACAPwAAWD8AAIA/AABgPwAAgD8AAGg/AACAPwAAcD8AAIA/AAB4PwAAgD8AAIA/AACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAD4AAIA/AABgPgAAAAAAAIA+AACAPwAAgD4AAIA/AACAPgAAgD8AAKA+AAAAAAAAoD4AAAAAAACgPgAAAAAAAOA+AACAPwAAKD8AAAAAAAAoPwAAgD8AADg/AACAPwAAOD8AAIA/AABAPwAAgD8AAEA/AACAPwAAUD8AAAAAAABQPwAAAAAAAFA/AAAAAAAAYD8AAIA/"),
"format": 34359742487,
"index_count": 780,
"index_data": PackedByteArray("AAACAAEAAwAFAAQABgAIAAcACQALAAoADAAOAA0ADwAHABAACwASABEAEwANABQAFQAQABYAEgAIAAYAFwAUAAkAGAAWAA4AGQAbABoAHAAeAB0AHwAhACAAIgAkACMAJQAnACYAKAAqACkAKwAtACwALgAwAC8AMQAzADIANAA2ADUANwA5ADgAOgA8ADsAPQA/AD4AQABCAEEAQwBFAEQARgBIAEcASQBLAEoATABOAE0ATwBRAFAAUgBUAFMAVQBWAAMAVwBZAFgAWgBcAFsAXQBfAF4AYABXAGEAYgBbAGMAZABdAGUAZgBgAGcAaABjAFgAWgBkAGkAXwBmAGoAawBsABkAbQBuABwAbwBwAB8AcQByACIAcwB0ACUAdQB2ACgAdwB4ACsAeQB6AC4AewB8ADEAfQB/AH4AgACCAIEAgwCFAIQAhgCIAIcAiQCLAIoAjACOAI0AjwCRAJAAkgCUAJMAlQCXAJYAmACaAJkAmwCdAJwAmwCcAJ4AmwCeAJ8AoACbAJ8AoACfAKEAoQCfAKIAogCfAKMAowCfAKQApQCgAKYApgCgAKEApQCmAKcApQCnAKgApQCoAKkAqgClAKkAqgCpAKsArACqAKsArACrAK0ArgCsAK0ArwCxALAArgCtALIAswCuALIAtACzALIArwCwALUAtgC0ALIArwC1ALYAtgCyALcArwC2ALcAuACvALcAuQC4ALcAuQC3ALoAuwC9ALwAvgC9ALsAvwC9AL4AvwDAAL0AwQDAAL8AwgDBAL8AwwDCAL8AxADDAL8AxQDGAMAAwQDFAMAAxwDGAMUAyADGAMcAyQDGAMgAyQDKAMYAywDKAMkAywDMAMoAzQDMAMsAzQDOAMwAzwDRANAA0gDOAM0A0gDTAM4A0gDUANMA1QDRAM8A0gDWANQA1gDRANUA1wDWANIA1wDRANYA1wDYANEA1wDZANgA2gDZANcA2wDdANwA3gDgAN8A4QDjAOIA5ADmAOUA5wDpAOgA6gDsAOsA7QDvAO4A8ADyAPEA8wD1APQA9gD4APcA+QD7APoA/AD+AP0A/wABAQABAgEEAQMBBQEHAQYBCAEKAQkBCwENAQwBDgEQAQ8BEQETARIBFAEWARUBFwEZARgBGgEcARsBHQEfAR4BIAEiASEBIwElASQBJgEoAScBKQErASoBLAEuAS0BLwExATABMgE0ATMBNQE3ATYBOAE6ATkBAAABADsBAwAEADwBBgAHAA8ACQAKAD0BDAANABMADwAQABUACwARAAoAEwAUABcAFQAWABgAEgAGABEAFwAJAD0BGAAOAAwAGQAaAD4BHAAdAD8BHwAgAEABIgAjAEEBJQAmAEIBKAApAEMBKwAsAEQBLgAvAEUBMQAyAEYBRwE0AEgBNAA1AEkBNQBLAUoBSwE1AEwBTAE1ADYANgBHAU0BRwE2ADQANwA4AE4BOgA7AE8BPQA+AFABQABBAFEBQwBEAFIBRgBHAFMBSQBKAFQBTABNAFUBTwBQAFYBUgBTAFcBVQADADwBVwBYAGEAWgBbAGIAXQBeAGUAYABhAGcAYgBjAGgAZABlAGkAZgBnAGoAaABYAFkAWgBpAFwAXwBqAF4AawAZAD4BbQAcAD8BbwAfAEABcQAiAEEBcwAlAEIBdQAoAEMBdwArAEQBeQAuAEUBewAxAEYBfQB+AFgBfgB/AFkBfwBbAVoBWwF/AFwBXAF/AF0BXQF/AF4BXgF/AH0AgACBAF8BgwCEAGABhgCHAGEBiQCKAGIBjACNAGMBjwCQAGQBkgCTAGUBlQCWAGYBmACZAGcB2wDcAGgB3gDfAGkB4QDiAGoB5ADlAGsB5wDoAGwB6gDrAG0B7QDuAG4B8ADxAG8B8wD0AHAB9gD3AHEB+QD6AHIB/AD9AHMB/wAAAXQBAgEDAXUBBQEGAXYBCAEJAXcBCwEMAXgBDgEPAXkBEQESAXoBFAEVAXsBFwEYAXwBGgEbAX0BHQEeAX4BIAEhAX8BIwEkAYABJgEnAYEBKQEqAYIBLAEtAYMBLwEwAYQBMgEzAYUBNQE2AYYBOAE5AYcB"),
"lods": [2.89187, PackedByteArray("kwGIAR4AjgGNAYgBkgGOAYgBdQCRAYkBVwBpAFgAVwBYAGEAVwBfAGkAXwBXAGEAXwBeAGkAXwBhAF4AjwFuAIsBgwBSAJYAgwCWAJAAUgCDAJAAUgCVAZYBmwCfAKEAoQCfAKMAowCfAKQAmwChAKsArgCbAKsArgCrALcAtwCxAK4AuwC9ALwAvgC9ALsAvwC9AL4AvwDAAL0AxADDAL8AwwDCAL8AwgDBAL8AwQDAAL8AwQDFAMAAxQDGAMAAxwDGAMUAyADGAMcAyQDGAMgAyQDKAMYAywDKAMkAywDMAMoAzQDMAMsAzQDOAMwA0gDOAM0A0gDTAM4A0gDUANMA0gDWANQA1wDWANIA2gDZANcA1wDZANgA1wDYANEA1wDRANYA1gDRANUA1QDRAM8AzwDRANAA3gDdANwA3gDcAN8A3gDfAOIA3gDiAOUA3gDlAJcB7QDeAOgA7QDoAOsA7QDrAO4A7QDuAPEA7QDxAJoBnAGYAZkBnQEHAQYBngEGAXYBngGbAfcAngH3APoAngH6AP0AngH9AAABngEAAQMBngEDAZ8BFwEKAQkBFwEJAQwBFwEMAQ8BFwEPARIBFwESARUBFwEVARgBFwEYAaEBoAEcARsBoAEbAaMBpgGjAaQBpgGgAaIBMgGnATMBMgEzAYUBpwGpATMBpwEtAakBpwEqAS0BqAEnASoBqAGlAScBNQE3ATYBNQE2AYYBOAE6ATkBOAE5AYcBDwAWABgAGAAWAD0BFgAPAD0BkAGKAYwBkAGUAYoB")],
"material": SubResource("StandardMaterial3D_vox2r"),
"name": "Silver.001",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 426,
"vertex_data": PackedByteArray("nu3Hv1G/DsBZvxm8M/pROoU+L8Ds24G+nu3Hv1G/DsDs24G+tftLQKuxdD/oacC6tftLQPuyjr8O3IG+tftLQKuxdD8O3IG+M/pROsuDW8Ds24G+nu3Hv1G/DsDs24G+M/pROoU+L8Ds24G+IuEhQPT4PT8O3IG+tftLQPuyjr8O3IG+IuEhQD+tZr8O3IG+mPj7vw9jKEDs24G+M/pROnMRJUAO3IG+je3Hvz6SBEDs24G+qfj7vxmQMsDs24G+48YhwE+tZr/s24G+Hy38Px2QMsDs24G+FCLIP1G/DsDs24G+M/pROrhWUUAO3IG+HSLIPz6SBEAO3IG+duFLwPuyjr/s24G+48YhwAX5PT/s24G+Hy38PwtjKEAO3IG+duFLwKuxdD/s24G+mPj7vw9jKEDoacC6M/pROrhWUUAO3IG+mPj7vw9jKEDs24G+qfj7vxmQMsDoacC6duFLwPuyjr/s24G+qfj7vxmQMsDs24G+tftLQPuyjr/oacC6Hy38Px2QMsDs24G+tftLQPuyjr8O3IG+M/pROrhWUUDoacC6Hy38PwtjKEAO3IG+M/pROrhWUUAO3IG+duFLwPuyjr/oacC6duFLwKuxdD/s24G+duFLwPuyjr/s24G+Hy38Px2QMsDoacC6M/pROsuDW8Ds24G+Hy38Px2QMsDs24G+Hy38PwtjKEDoacC6tftLQKuxdD8O3IG+Hy38PwtjKEAO3IG+duFLwKuxdD/oacC6mPj7vw9jKEDs24G+duFLwKuxdD/s24G+M/pROsuDW8DoacC6qfj7vxmQMsDs24G+M/pROsuDW8Ds24G+IuEhQPT4PT9Zvxm8FCLIP1G/DsBZvxm848YhwAX5PT9Zvxm8IuEhQD+tZr9Zvxm8IuEhQPT4PT8O3IG+IuEhQD+tZr8O3IG+M/pROnMRJUBZvxm8je3Hvz6SBEDs24G+M/pROnMRJUAO3IG+48YhwE+tZr9Zvxm8nu3Hv1G/DsDs24G+48YhwE+tZr/s24G+FCLIP1G/DsDs24G+IuEhQD+tZr9Zvxm8IuEhQD+tZr8O3IG+HSLIPz6SBEBZvxm8M/pROnMRJUAO3IG+HSLIPz6SBEAO3IG+48YhwAX5PT9Zvxm848YhwE+tZr/s24G+48YhwAX5PT/s24G+M/pROoU+L8Ds24G+FCLIP1G/DsBZvxm8FCLIP1G/DsDs24G+IuEhQPT4PT9Zvxm8HSLIPz6SBEAO3IG+IuEhQPT4PT8O3IG+je3Hvz6SBEBZvxm848YhwAX5PT/s24G+je3Hvz6SBEDs24G+nu3Hv1G/DsAYW4A+M/pROoU+L8C/SdM7nu3Hv1G/DsC/SdM7tftLQPuyjr86W4A+tftLQKuxdD86W4A+nu3Hv1G/DsAYW4A+M/pROsuDW8AYW4A+M/pROoU+L8AYW4A+IuEhQPT4PT86W4A+tftLQPuyjr86W4A+tftLQKuxdD86W4A+M/pROnMRJUAYW4A+mPj7vw9jKEAYW4A+je3Hvz6SBEAYW4A+48YhwE+tZr8YW4A+qfj7vxmQMsAYW4A+IuEhQD+tZr86W4A+Hy38Px2QMsAYW4A+HSLIPz6SBEA6W4A+M/pROrhWUUA6W4A+48YhwAX5PT8YW4A+duFLwPuyjr8YW4A+FCLIP1G/DsAYW4A+Hy38PwtjKEA6W4A+duFLwKuxdD8YW4A+M/pROrhWUUA6W4A+mPj7vw9jKEAYW4A+duFLwPuyjr8YW4A+qfj7vxmQMsAYW4A+Hy38Px2QMsAYW4A+tftLQPuyjr86W4A+Hy38PwtjKEA6W4A+M/pROrhWUUA6W4A+duFLwKuxdD8YW4A+duFLwPuyjr8YW4A+M/pROsuDW8AYW4A+Hy38Px2QMsAYW4A+tftLQKuxdD86W4A+Hy38PwtjKEA6W4A+mPj7vw9jKEAYW4A+duFLwKuxdD8YW4A+qfj7vxmQMsAYW4A+M/pROsuDW8AYW4A+IuEhQPT4PT+/SdM7M/pROnMRJUC/SdM748YhwAX5PT+/SdM7IuEhQPT4PT86W4A+IuEhQD+tZr+/SdM7IuEhQD+tZr86W4A+je3Hvz6SBEAYW4A+M/pROnMRJUC/SdM7M/pROnMRJUAYW4A+nu3Hv1G/DsAYW4A+48YhwE+tZr+/SdM748YhwE+tZr8YW4A+FCLIP1G/DsAYW4A+IuEhQD+tZr+/SdM7FCLIP1G/DsC/SdM7M/pROnMRJUAYW4A+HSLIPz6SBEC/SdM7HSLIPz6SBEA6W4A+48YhwE+tZr8YW4A+48YhwAX5PT+/SdM748YhwAX5PT8YW4A+M/pROoU+L8AYW4A+FCLIP1G/DsC/SdM7M/pROoU+L8C/SdM7HSLIPz6SBEA6W4A+IuEhQPT4PT+/SdM7IuEhQPT4PT86W4A+48YhwAX5PT8YW4A+je3Hvz6SBEC/SdM7je3Hvz6SBEAYW4A+QtDZPrmOyT9NFaS+nKShvrit0z9NFaS+3PadvdnR1j9NFaS+pdkMv2hByj9NFaS+CMlGv9+Muj9NFaS+iZVBP8R5pD9NFaS+oiclvQ3+oj9NFaS+ViqIvoFZnz9NFaS+B5oDvyNqkj9NFaS+CMlGv7xacj9NFaS+DhRgP0JDVz9NFaS+Ko9ePhnonD9NFaS+mszIPkM4jD9NFaS+vcfpPkuTZj9NFaS+9GzWPSxF4j5NFaS+zv0FP8nkRD5NFaS+UoAMv+7o/zxNFaS+iUAFvncPcL5NFaS+opZmv8L5ML8rFaS+xMz2vrvuPb8rFaS+7l1bP95WoL8rFaS+ucIbP2Rbbr8rFaS+7l1bP7KeLr9NFaS+vw1Jv0C+kL8rFaS+3sravpwWbL8rFaS+0qyEvil1ib8rFaS+iZqoPiLgir8rFaS+4BPrPJmdkb8rFaS+Zwzzvvgyt78rFaS+uJEWP9Y2tb8rFaS+mRKZPn5zwb8rFaS+SIuzvGVxxb8rFaS+nKShvrit0z8suqU+3PadvdnR1j8suqU+QtDZPrmOyT8suqU+pdkMv2hByj8suqU+CMlGv9+Muj8suqU+iZVBP8R5pD8suqU+oiclvQ3+oj8suqU+ViqIvoFZnz8suqU+B5oDvyNqkj8suqU+CMlGv7xacj8suqU+Ko9ePhnonD8suqU+DhRgP0JDVz8suqU+mszIPkM4jD8suqU+vcfpPkuTZj8suqU+9GzWPSxF4j4suqU+zv0FP8nkRD4suqU+UoAMv+7o/zwsuqU+iUAFvncPcL4suqU+opZmv8L5ML8suqU+xMz2vrvuPb8suqU+ucIbP2Rbbr8suqU+7l1bP7KeLr8suqU+7l1bP95WoL8suqU+vw1Jv0C+kL8suqU+3sravpwWbL8suqU+0qyEvil1ib8suqU+iZqoPiLgir8suqU+4BPrPJmdkb8suqU+Zwzzvvgyt78suqU+uJEWP9Y2tb8suqU+mRKZPn5zwb8suqU+SIuzvGVxxb8suqU+ViqIvoFZnz9NFaS+B5oDvyNqkj8suqU+B5oDvyNqkj9NFaS+oiclvQ3+oj9NFaS+ViqIvoFZnz8suqU+ViqIvoFZnz9NFaS+Ko9ePhnonD9NFaS+oiclvQ3+oj8suqU+oiclvQ3+oj9NFaS+mszIPkM4jD9NFaS+Ko9ePhnonD8suqU+Ko9ePhnonD9NFaS+vcfpPkuTZj9NFaS+mszIPkM4jD8suqU+mszIPkM4jD9NFaS+9GzWPSxF4j5NFaS+vcfpPkuTZj8suqU+vcfpPkuTZj9NFaS+UoAMv+7o/zxNFaS+9GzWPSxF4j4suqU+9GzWPSxF4j5NFaS+opZmv8L5ML8rFaS+UoAMv+7o/zwsuqU+UoAMv+7o/zxNFaS+vw1Jv0C+kL8rFaS+opZmv8L5ML8suqU+opZmv8L5ML8rFaS+Zwzzvvgyt78rFaS+vw1Jv0C+kL8suqU+vw1Jv0C+kL8rFaS+SIuzvGVxxb8rFaS+Zwzzvvgyt78suqU+Zwzzvvgyt78rFaS+mRKZPn5zwb8rFaS+SIuzvGVxxb8suqU+SIuzvGVxxb8rFaS+uJEWP9Y2tb8rFaS+mRKZPn5zwb8suqU+mRKZPn5zwb8rFaS+7l1bP95WoL8rFaS+uJEWP9Y2tb8suqU+uJEWP9Y2tb8rFaS+7l1bP95WoL8rFaS+7l1bP7KeLr8suqU+7l1bP95WoL8suqU+ucIbP2Rbbr8rFaS+7l1bP7KeLr8suqU+7l1bP7KeLr9NFaS+iZqoPiLgir8rFaS+ucIbP2Rbbr8suqU+ucIbP2Rbbr8rFaS+4BPrPJmdkb8rFaS+iZqoPiLgir8suqU+iZqoPiLgir8rFaS+0qyEvil1ib8rFaS+4BPrPJmdkb8suqU+4BPrPJmdkb8rFaS+3sravpwWbL8rFaS+0qyEvil1ib8suqU+0qyEvil1ib8rFaS+xMz2vrvuPb8rFaS+3sravpwWbL8suqU+3sravpwWbL8rFaS+xMz2vrvuPb8rFaS+iUAFvncPcL4suqU+xMz2vrvuPb8suqU+zv0FP8nkRD5NFaS+iUAFvncPcL4suqU+iUAFvncPcL5NFaS+DhRgP0JDVz9NFaS+zv0FP8nkRD4suqU+zv0FP8nkRD5NFaS+iZVBP8R5pD9NFaS+DhRgP0JDVz8suqU+DhRgP0JDVz9NFaS+QtDZPrmOyT9NFaS+iZVBP8R5pD8suqU+iZVBP8R5pD9NFaS+3PadvdnR1j9NFaS+QtDZPrmOyT8suqU+QtDZPrmOyT9NFaS+nKShvrit0z9NFaS+3PadvdnR1j8suqU+3PadvdnR1j9NFaS+pdkMv2hByj9NFaS+nKShvrit0z8suqU+nKShvrit0z9NFaS+CMlGv9+Muj9NFaS+pdkMv2hByj8suqU+pdkMv2hByj9NFaS+CMlGv7xacj9NFaS+CMlGv9+Muj8suqU+CMlGv9+Muj9NFaS+B5oDvyNqkj9NFaS+CMlGv7xacj8suqU+CMlGv7xacj9NFaS+M/pROoU+L8BZvxm8tftLQPuyjr/oacC6tftLQKuxdD8O3IG+M/pROrhWUUDoacC6duFLwPuyjr/oacC6Hy38Px2QMsDoacC6Hy38PwtjKEDoacC6duFLwKuxdD/oacC6M/pROsuDW8DoacC6tftLQKuxdD/oacC6mPj7vw9jKEDoacC6qfj7vxmQMsDoacC6M/pROnMRJUBZvxm8HSLIPz6SBEBZvxm8IuEhQD+tZr9Zvxm8M/pROoU+L8BZvxm8nu3Hv1G/DsBZvxm848YhwE+tZr9Zvxm8je3Hvz6SBEBZvxm8IuEhQPT4PT9Zvxm8je3Hvz6SBEBZvxm8nu3Hv1G/DsBZvxm8FCLIP1G/DsBZvxm8M/pROnMRJUBZvxm848YhwE+tZr9Zvxm8M/pROoU+L8BZvxm8HSLIPz6SBEBZvxm848YhwAX5PT9Zvxm8M/pROoU+L8AYW4A+HSLIPz6SBEC/SdM7je3Hvz6SBEC/SdM748YhwE+tZr+/SdM7nu3Hv1G/DsC/SdM7M/pROoU+L8C/SdM7FCLIP1G/DsC/SdM7IuEhQD+tZr+/SdM7IuEhQPT4PT+/SdM7je3Hvz6SBEC/SdM7nu3Hv1G/DsC/SdM7IuEhQD+tZr86W4A+M/pROnMRJUC/SdM748YhwE+tZr+/SdM7FCLIP1G/DsAYW4A+HSLIPz6SBEC/SdM748YhwAX5PT+/SdM7ViqIvoFZnz8suqU+oiclvQ3+oj8suqU+Ko9ePhnonD8suqU+mszIPkM4jD8suqU+vcfpPkuTZj8suqU+9GzWPSxF4j4suqU+UoAMv+7o/zwsuqU+opZmv8L5ML8suqU+vw1Jv0C+kL8suqU+Zwzzvvgyt78suqU+SIuzvGVxxb8suqU+mRKZPn5zwb8suqU+uJEWP9Y2tb8suqU+7l1bP95WoL8suqU+7l1bP7KeLr9NFaS+ucIbP2Rbbr8suqU+iZqoPiLgir8suqU+4BPrPJmdkb8suqU+0qyEvil1ib8suqU+3sravpwWbL8suqU+xMz2vrvuPb8suqU+iUAFvncPcL5NFaS+zv0FP8nkRD4suqU+DhRgP0JDVz8suqU+iZVBP8R5pD8suqU+QtDZPrmOyT8suqU+3PadvdnR1j8suqU+nKShvrit0z8suqU+pdkMv2hByj8suqU+CMlGv9+Muj8suqU+CMlGv7xacj8suqU+B5oDvyNqkj8suqU+tftLQKuxdD8O3IG+tftLQKuxdD8O3IG+qfj7vxmQMsDs24G+duFLwKuxdD/s24G+duFLwKuxdD/s24G+duFLwKuxdD/s24G+mPj7vw9jKEAYW4A+mPj7vw9jKEAYW4A+qfj7vxmQMsAYW4A+Hy38PwtjKEA6W4A+Hy38PwtjKEA6W4A+M/pROsuDW8AYW4A+M/pROsuDW8AYW4A+48YhwAX5PT+/SdM7IuEhQPT4PT+/SdM7mszIPkM4jD8suqU+UoAMv+7o/zxNFaS+opZmv8L5ML8suqU+opZmv8L5ML8suqU+opZmv8L5ML8suqU+Zwzzvvgyt78rFaS+Zwzzvvgyt78rFaS+Zwzzvvgyt78rFaS+7l1bP95WoL8suqU+xMz2vrvuPb8rFaS+xMz2vrvuPb8suqU+zv0FP8nkRD4suqU+zv0FP8nkRD4suqU+DhRgP0JDVz8suqU+DhRgP0JDVz8suqU+QtDZPrmOyT9NFaS+QtDZPrmOyT9NFaS+QtDZPrmOyT9NFaS+nKShvrit0z8suqU+Yp+b4P///79in5vg////v2Kfm+D///+/////f////7////9/////v////3////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7+cYJvg////v5xgm+D///+/nGCb4P///7/dNSJK////v901Ikr///+/3TUiSv///78hyiJK////vyHKIkr///+/IcoiSv///79in5vg////v2Kfm+D///+/Yp+b4P///78AAP9/////vwAA/3////+/AAD/f////79in2Mf////v2KfYx////+/Yp9jH////78hyty1////vyHK3LX///+/Icrctf///7/dNdy1////v9013LX///+/3TXctf///7+cYGMf////v5xgYx////+/nGBjH////7//////////v/////////+//////////78AAP9/////vwAA/3////+/AAD/f////79in2Mf////v2KfYx////+/Yp9jH////78hyty1////vyHK3LX///+/Icrctf///7/dNdy1////v9013LX///+/3TXctf///7+cYGMf////v5xgYx////+/nGBjH////7////9/////v////3////+/////f////7+cYJvg////v5xgm+D///+/nGCb4P///7/dNSJK////v901Ikr///+/3TUiSv///78hyiJK////vyHKIkr///+/IcoiSv///79in5vg////v2Kfm+D///+/Yp+b4P///7////9/////v////3////+//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P5xgm+D///+/nGCb4P///7/dNSJK////v901Ikr///+/IcoiSv///78hyiJK////v2Kfm+D///+/Yp+b4P///78AAP9/////vwAA/3////+/Yp9jH////79in2Mf////vyHK3LX///+/Icrctf///7/dNdy1////v9013LX///+/nGBjH////7+cYGMf////v/9//3////8//3//f////z//f/9/////PwAA/3////+/AAD/f////78AAP9/////v2KfYx////+/Yp9jH////79in2Mf////vyHK3LX///+/Icrctf///78hyty1////v9013LX///+/3TXctf///7/dNdy1////v5xgYx////+/nGBjH////7+cYGMf////v////3////+/////f////7////9/////v5xgm+D///+/nGCb4P///7+cYJvg////v901Ikr///+/3TUiSv///7/dNSJK////vyHKIkr///+/IcoiSv///78hyiJK////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+/C6ULJfPaeS0LpQsl89p5LQulCyXz2nktVI5VDqnx1ThUjlUOqfHVOFSOVQ6p8dU4DmzxEw3s+EkObPETDez4SQ5s8RMN7PhJVEmrNlPJVVtUSas2U8lVW1RJqzZTyVVbzx8vYM+fF3DPHy9gz58XcM8fL2DPnxdwkDePt29IN2SQN4+3b0g3ZJA3j7dvSDdkmk6ZzmUxsliaTpnOZTGyWJpOmc5lMbJY7CnsqRJWCWvsKeypElYJa+wp7KkSVglrnRpiZZyasHKdGmJlnJqwcp0aYmWcmrByEUHuPhDBdl8RQe4+EMF2XxFB7j4QwXZfvmZBGb3moEy+ZkEZveagTL5mQRm95qBMVYtVC6n0VDpVi1ULqfRUOlWLVQup9FQ6zJ/NHzHgGTDMn80fMeAZMMyfzR8x4BkwVrBXMKfP1CdWsFcwp8/UJ1awVzCnz9Qn////f/9/AAD///9//38AAP///3//fwAA7z/vvw9AB2DvP++/D0AHYO8/778QQAdgglKB0n0tvlaCUoHSfS2+VoJSgdJ9Lb5W7Gzr7BMTiUnsbOvsExOJSexs6+wTE4lJNJfK6DQXZTQ0l8roNBdlNDSXyug0F2U0sLxOw7A8pyGwvE7DsDynIbC8TsOwPKchM+LKnTRi5Q4z4sqdNGLlDjPiyp00YuUOlsuWS2i0NBqWy5ZLaLQ0GpbLlktotDQaj7KPMm/NtyaPso8yb823Jo+yjzJvzbcm+dL6UgStghb50vpSBK2CFvnS+lIErYIW7OQSm+xkiQ3s5BKb7GSJDezkEpvsZIkNwrs7xMM7HiLCuzvEwzseIsK7O8TDOx4i35Ue6uAVDzXflR7q4BUPNd+VHurgFQ81EHQP9O8L90UQdA/07wv3RRB0D/TvC/dFamFq4ZQeSk9qYWrhlB5KT2phauGUHkpP/1L/0v8sf1b/Uv/S/yx/Vv9S/9L/LH9WAAD/f/9//n8AAP9//3/+fwAA/3//f/5/6bbpNhXJiiTptuk2FcmKJOm26TYVyYokYp+b4P///7////9/////v/////////+/nGCb4P///7/dNSJK////vyHKIkr///+/Yp+b4P///78AAP9/////v2KfYx////+/Icrctf///7/dNdy1////v5xgYx////+//////////7//////////v/////////+//////////7//////////v/////////+//////////78AAP9/////v2KfYx////+/Icrctf///7/dNdy1////v5xgYx////+/////f////7+cYJvg////v901Ikr///+/IcoiSv///79in5vg////v/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8/AAD/f////79in2Mf////vyHK3LX///+/3TXctf///7+cYGMf////v////3////+/nGCb4P///7/dNSJK////vyHKIkr///+/C6ULJfPaeS1UjlUOqfHVOA5s8RMN7PhJVEmrNlPJVVvPHy9gz58XcJA3j7dvSDdkmk6ZzmUxsljsKeypElYJa50aYmWcmrByEUHuPhDBdl++ZkEZveagTFWLVQup9FQ6zJ/NHzHgGTBWsFcwp8/UJ////3//fwAA7z/vvw9AB2CCUoHSfS2+Vuxs6+wTE4lJNJfK6DQXZTSwvE7DsDynITPiyp00YuUOlsuWS2i0NBqPso8yb823JvnS+lIErYIW7OQSm+xkiQ3CuzvEwzseIt+VHurgFQ81EHQP9O8L90VqYWrhlB5KT/9S/9L/LH9WAAD/f/9//n/ptuk2FcmKJKP2Ef7///+//3//f////7+7R0M4////v/9//3////+/myZkWf///78u+sz+////v5L5q/7///+//3//f////792SIg3////v/9//3////+//////////7//////////v5xgYx////+//3//f////7//f/9/////v+VeGiHPnxdwIRLkyWUxslg1AQBanJqwcuwp7KmcmrBy3B2VV5yasHKuFN0nEMF2X/////8QwXZfWmONGhDBdl+bpJsk/38AAJXGzTw0YuUOM+LKnWi0NBpgz1slBK2CFhHFKkAErYIWHt5vPuxkiQ0I2zCv7GSJDTDyIxHDOx4ihpIE88M7HiIKw1HGwzseInOKWfmUHkpP")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_vb44y")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gyu6d"]
height = 0.2

[node name="SilverCoin" type="RigidBody3D"]
collision_layer = 2
collision_mask = 15
axis_lock_linear_x = true
axis_lock_linear_y = true
axis_lock_linear_z = true
custom_integrator = true
continuous_cd = true
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_n06cy")

[node name="SilverCoin_Circle_002" type="MeshInstance3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0)
mesh = SubResource("ArrayMesh_h13u8")
skeleton = NodePath("")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("1_36l7l")
volume_db = -20.601

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_gyu6d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
